libexec_SCRIPTS=check_nwc_health
GL_MODULES=\
  ../lib/Monitoring/GLPlugin/Commandline/Getopt.pm \
  ../lib/Monitoring/GLPlugin/Commandline.pm \
  ../lib/Monitoring/GLPlugin.pm \
  ../lib/Monitoring/GLPlugin/Item.pm \
  ../lib/Monitoring/GLPlugin/TableItem.pm \
  ../lib/Monitoring/GLPlugin/SNMP.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/MIB2MIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SNMPFRAMEWORKMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/AIRESPACESWITCHINGMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/AIRESPACEWIRELESSMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ALARMMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ALCATELIND1BASEMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ARUBATCMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ASYNCOSMAILMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ATTACKMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BGP4MIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BLUECOATAVMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BLUECOATSGPROXYMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CHECKPOINTMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOBGP4MIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOCCMMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOCONFIGMANMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOENHANCEDMEMPOOLMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOENTITYALARMMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOENTITYFRUCONTROLMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOENTITYSENSORMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOENVMONMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOETHERNETFABRICEXTENDERMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOFEATURECONTROLMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOFIREWALLMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOHSRPMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOIETFNATMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOIPSECFLOWMONITORMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOL2L3INTERFACECONFIGMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOMEMORYPOOLMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOPROCESSMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSYSTEMEXTMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOVTPMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CLAVISTERMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/DISKMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ENTITYMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ENTITYSENSORMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/F5BIGIPLOCALMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/F5BIGIPSYSTEMMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FCEOSMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FCMGMTMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FORTINETFORTIGATEMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FOUNDRYSNAGENTMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FOUNDRYSNSWL4SWITCHGROUPMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HH3CENTITYEXTMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HOSTRESOURCESMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HPICFCHASSISMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/IFMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/IPFORWARDMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/IPMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/JUNIPERIVEMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LARAMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LMSENSORSMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LOADBALSYSTEMMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/MINIIFMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETGEARMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETSCREENCHASSISMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETSCREENPRODUCTSMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETSCREENRESOURCEMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETSWITCHMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OLDCISCOCPUMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OLDNETSWITCHMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OLDSTATISTICSMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ONEACCESSSYSMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OSPFMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/PANCOMMONMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/PANPRODUCTSMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/PROXYMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/RAPIDCITYMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/RESOURCEMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/S5CHASSISMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SENSORMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SNMPV2TCV1MIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/STATISTICSMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SWMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SYNOPTICSROOTMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SYSTEMRESOURCESMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/UCDSNMPMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/USAGEMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/WLSXSYSTEMEXTMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/MibsAndOids/WLSXWLANMIB.pm \
  ../lib/Monitoring/GLPlugin/SNMP/CSF.pm \
  ../lib/Monitoring/GLPlugin/SNMP/Item.pm \
  ../lib/Monitoring/GLPlugin/SNMP/TableItem.pm \
  ../lib/Monitoring/GLPlugin/UPNP.pm
EXTRA_MODULES=\
  Classes/UPNP/AVM/FritzBox7390/Components/InterfaceSubsystem.pm \
  Classes/UPNP/AVM/FritzBox7390/Components/SmartHomeSubsystem.pm \
  Classes/UPNP/AVM/FritzBox7390.pm \
  Classes/UPNP/AVM.pm \
  Classes/UPNP.pm \
  Classes/Server/Linux.pm \
  Classes/Server/Windows.pm \
  Classes/Server/Solaris.pm \
  Classes/Cisco/CISCOIPSECFLOWMONITOR/Component/VpnSubsystem.pm \
  Classes/Cisco/CISCOENTITYFRUCONTROLMIB/Component/EnvironmentalSubsystem.pm \
  Classes/Cisco/CISCOENTITYFRUCONTROLMIB/Component/FanSubsystem.pm \
  Classes/Cisco/CISCOENTITYFRUCONTROLMIB/Component/ModuleSubsystem.pm \
  Classes/Cisco/CISCOENTITYFRUCONTROLMIB/Component/PowersupplySubsystem.pm \
  Classes/Cisco/CISCOENTITYSENSORMIB/Component/SensorSubsystem.pm \
  Classes/Cisco/CISCOENTITYALARMMIB/Component/AlarmSubsystem.pm \
  Classes/Cisco/CISCOENVMONMIB/Component/TemperatureSubsystem.pm \
  Classes/Cisco/CISCOENVMONMIB/Component/PowersupplySubsystem.pm \
  Classes/Cisco/CISCOENVMONMIB/Component/VoltageSubsystem.pm \
  Classes/Cisco/CISCOENVMONMIB/Component/FanSubsystem.pm \
  Classes/Cisco/ASA.pm \
  Classes/Cisco/IOS/Component/ConfigSubsystem.pm \
  Classes/Cisco/IOS/Component/CpuSubsystem.pm \
  Classes/Cisco/IOS/Component/MemSubsystem.pm \
  Classes/Cisco/IOS/Component/EnvironmentalSubsystem.pm \
  Classes/Cisco/IOS/Component/ConnectionSubsystem.pm \
  Classes/Cisco/IOS/Component/NatSubsystem.pm \
  Classes/Cisco/IOS/Component/BgpSubsystem.pm \
  Classes/Cisco/IOS.pm \
  Classes/Cisco/NXOS/Component/CpuSubsystem.pm \
  Classes/Cisco/NXOS/Component/MemSubsystem.pm \
  Classes/Cisco/NXOS/Component/EnvironmentalSubsystem.pm \
  Classes/Cisco/NXOS/Component/FexSubsystem.pm \
  Classes/Cisco/NXOS.pm \
  Classes/Cisco/WLC/Component/MemSubsystem.pm \
  Classes/Cisco/WLC/Component/CpuSubsystem.pm \
  Classes/Cisco/WLC/Component/EnvironmentalSubsystem.pm \
  Classes/Cisco/WLC/Component/WlanSubsystem.pm \
  Classes/Cisco/WLC.pm \
  Classes/Cisco/PrimeNCS.pm \
  Classes/Cisco/UCOS.pm \
  Classes/Cisco/CCM/Component/PhoneSubsystem.pm \
  Classes/Cisco/CCM/Component/CmSubsystem.pm \
  Classes/Cisco/CCM.pm \
  Classes/Cisco/AsyncOS/Component/KeySubsystem.pm \
  Classes/Cisco/AsyncOS/Component/MemSubsystem.pm \
  Classes/Cisco/AsyncOS/Component/CpuSubsystem.pm \
  Classes/Cisco/AsyncOS/Component/TemperatureSubsystem.pm \
  Classes/Cisco/AsyncOS/Component/PowersupplySubsystem.pm \
  Classes/Cisco/AsyncOS/Component/FanSubsystem.pm \
  Classes/Cisco/AsyncOS/Component/RaidSubsystem.pm \
  Classes/Cisco/AsyncOS/Component/EnvironmentalSubsystem.pm \
  Classes/Cisco/AsyncOS.pm \
  Classes/Cisco.pm \
  Classes/OneOS/Component/EnvironmentalSubsystem.pm \
  Classes/OneOS/Component/CpuSubsystem.pm \
  Classes/OneOS/Component/MemSubsystem.pm \
  Classes/OneOS.pm \
  Classes/Nortel/S5/Component/EnvironmentalSubsystem.pm \
  Classes/Nortel/S5/Component/CpuSubsystem.pm \
  Classes/Nortel/S5/Component/MemSubsystem.pm \
  Classes/Nortel/S5.pm \
  Classes/Nortel.pm \
  Classes/Juniper/NetScreen/Component/CpuSubsystem.pm \
  Classes/Juniper/NetScreen/Component/MemSubsystem.pm \
  Classes/Juniper/NetScreen/Component/EnvironmentalSubsystem.pm \
  Classes/Juniper/NetScreen.pm \
  Classes/Juniper/IVE/Component/MemSubsystem.pm \
  Classes/Juniper/IVE/Component/CpuSubsystem.pm \
  Classes/Juniper/IVE/Component/EnvironmentalSubsystem.pm \
  Classes/Juniper/IVE/Component/DiskSubsystem.pm \
  Classes/Juniper/IVE/Component/UserSubsystem.pm \
  Classes/Juniper/IVE.pm \
  Classes/Juniper.pm \
  Classes/AlliedTelesyn.pm \
  Classes/Fortigate/Component/MemSubsystem.pm \
  Classes/Fortigate/Component/CpuSubsystem.pm \
  Classes/Fortigate/Component/EnvironmentalSubsystem.pm \
  Classes/Fortigate/Component/SensorSubsystem.pm \
  Classes/Fortigate.pm \
  Classes/FabOS/Component/MemSubsystem.pm \
  Classes/FabOS/Component/CpuSubsystem.pm \
  Classes/FabOS/Component/EnvironmentalSubsystem.pm \
  Classes/FabOS/Component/SensorSubsystem.pm \
  Classes/FabOS.pm \
  Classes/HH3C/Component/EntitySubsystem.pm \
  Classes/HH3C/Component/EnvironmentalSubsystem.pm \
  Classes/HH3C/Component/MemSubsystem.pm \
  Classes/HH3C/Component/CpuSubsystem.pm \
  Classes/HH3C.pm \
  Classes/Huawei/Component/EnvironmentalSubsystem.pm \
  Classes/Huawei/Component/CpuSubsystem.pm \
  Classes/Huawei/Component/MemSubsystem.pm \
  Classes/Huawei/CloudEngine.pm \
  Classes/Huawei.pm \
  Classes/HP/Procurve/Component/MemSubsystem.pm \
  Classes/HP/Procurve/Component/CpuSubsystem.pm \
  Classes/HP/Procurve/Component/EnvironmentalSubsystem.pm \
  Classes/HP/Procurve/Component/SensorSubsystem.pm \
  Classes/HP/Procurve.pm \
  Classes/HP.pm \
  Classes/MEOS.pm \
  Classes/Brocade.pm \
  Classes/SecureOS.pm \
  Classes/HSRP/Component/HSRPSubsystem.pm \
  Classes/HSRP.pm \
  Classes/IFMIB/Component/LinkAggregation.pm \
  Classes/IFMIB/Component/InterfaceSubsystem.pm \
  Classes/IFMIB.pm \
  Classes/IPFORWARDMIB/Component/RoutingSubsystem.pm \
  Classes/IPFORWARDMIB.pm \
  Classes/IPMIB/Component/RoutingSubsystem.pm \
  Classes/IPMIB.pm \
  Classes/HOSTRESOURCESMIB/Component/DiskSubsystem.pm \
  Classes/HOSTRESOURCESMIB/Component/EnvironmentalSubsystem.pm \
  Classes/HOSTRESOURCESMIB/Component/CpuSubsystem.pm \
  Classes/HOSTRESOURCESMIB/Component/MemSubsystem.pm \
  Classes/HOSTRESOURCESMIB.pm \
  Classes/LMSENSORSMIB/Component/EnvironmentalSubsystem.pm \
  Classes/LMSENSORSMIB/Component/FanSubsystem.pm \
  Classes/LMSENSORSMIB/Component/TemperatureSubsystem.pm \
  Classes/LMSENSORSMIB.pm \
  Classes/ENTITYSENSORMIB.pm \
  Classes/ENTITYSENSORMIB/Component/EnvironmentalSubsystem.pm \
  Classes/OSPF/Component/NeighborSubsystem.pm \
  Classes/OSPF.pm \
  Classes/BGP/Component/PeerSubsystem.pm \
  Classes/BGP.pm \
  Classes/FCMGMT/Component/EnvironmentalSubsystem.pm \
  Classes/FCMGMT/Component/SensorSubsystem.pm \
  Classes/FCMGMT.pm \
  Classes/FCEOS/Components/EnvironmentalSubsystem.pm \
  Classes/FCEOS/Components/FruSubsystem.pm \
  Classes/FCEOS.pm \
  Classes/UCDMIB/Components/MemSubsystem.pm \
  Classes/UCDMIB/Components/CpuSubsystem.pm \
  Classes/UCDMIB.pm \
  Classes/F5/F5BIGIP/Component/LTM.pm \
  Classes/F5/F5BIGIP/Component/DiskSubsystem.pm \
  Classes/F5/F5BIGIP/Component/MemSubsystem.pm \
  Classes/F5/F5BIGIP/Component/PowersupplySubsystem.pm \
  Classes/F5/F5BIGIP/Component/TemperatureSubsystem.pm \
  Classes/F5/F5BIGIP/Component/CpuSubsystem.pm \
  Classes/F5/F5BIGIP/Component/FanSubsystem.pm \
  Classes/F5/F5BIGIP/Component/EnvironmentalSubsystem.pm \
  Classes/F5/F5BIGIP.pm \
  Classes/F5.pm \
  Classes/CheckPoint/Firewall1/Component/EnvironmentalSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/TemperatureSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/FanSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/VoltageSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/PowersupplySubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/DiskSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/MngmtSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/SvnSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/FwSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/HaSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/CpuSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/MemSubsystem.pm \
  Classes/CheckPoint/Firewall1.pm \
  Classes/CheckPoint/VSX/Component/FwSubsystem.pm \
  Classes/CheckPoint/VSX.pm \
  Classes/CheckPoint.pm \
  Classes/Clavister/Firewall1/Component/EnvironmentalSubsystem.pm \
  Classes/Clavister/Firewall1/Component/CpuSubsystem.pm \
  Classes/Clavister/Firewall1/Component/MemSubsystem.pm \
  Classes/Clavister/Firewall1.pm \
  Classes/Clavister.pm \
  Classes/SGOS/Component/MemSubsystem.pm \
  Classes/SGOS/Component/CpuSubsystem.pm \
  Classes/SGOS/Component/EnvironmentalSubsystem.pm \
  Classes/SGOS/Component/SensorSubsystem.pm \
  Classes/SGOS/Component/DiskSubsystem.pm \
  Classes/SGOS/Component/SecuritySubsystem.pm \
  Classes/SGOS/Component/ConnectionSubsystem.pm \
  Classes/SGOS.pm \
  Classes/AVOS/Component/KeySubsystem.pm \
  Classes/AVOS/Component/SecuritySubsystem.pm \
  Classes/AVOS/Component/ConnectionSubsystem.pm \
  Classes/AVOS/Component/MemSubsystem.pm \
  Classes/AVOS/Component/CpuSubsystem.pm \
  Classes/AVOS.pm \
  Classes/Alcatel/OmniAccess/Component/HaSubsystem.pm \
  Classes/Alcatel/OmniAccess/Component/MemSubsystem.pm \
  Classes/Alcatel/OmniAccess/Component/CpuSubsystem.pm \
  Classes/Alcatel/OmniAccess/Component/PowersupplySubsystem.pm \
  Classes/Alcatel/OmniAccess/Component/FanSubsystem.pm \
  Classes/Alcatel/OmniAccess/Component/StorageSubsystem.pm \
  Classes/Alcatel/OmniAccess/Component/EnvironmentalSubsystem.pm \
  Classes/Alcatel/OmniAccess/Component/WlanSubsystem.pm \
  Classes/Alcatel/OmniAccess.pm \
  Classes/Alcatel.pm \
  Classes/ALARMMIB/Component/AlarmSubsystem.pm \
  Classes/Foundry/Component/SLBSubsystem.pm \
  Classes/Foundry/Component/MemSubsystem.pm \
  Classes/Foundry/Component/CpuSubsystem.pm \
  Classes/Foundry/Component/EnvironmentalSubsystem.pm \
  Classes/Foundry/Component/PowersupplySubsystem.pm \
  Classes/Foundry/Component/FanSubsystem.pm \
  Classes/Foundry/Component/TemperatureSubsystem.pm \
  Classes/Foundry.pm \
  Classes/RAPIDCITYMIB/Component/EnvironmentalSubsystem.pm \
  Classes/RAPIDCITYMIB/Component/PowersupplySubsystem.pm \
  Classes/RAPIDCITYMIB/Component/FanSubsystem.pm \
  Classes/RAPIDCITYMIB/Component/TemperatureSubsystem.pm \
  Classes/RAPIDCITYMIB.pm \
  Classes/PaloAlto/Component/MemSubsystem.pm \
  Classes/PaloAlto/Component/CpuSubsystem.pm \
  Classes/PaloAlto/Component/EnvironmentalSubsystem.pm \
  Classes/PaloAlto/Component/HaSubsystem.pm \
  Classes/PaloAlto.pm \
  Classes/Bluecoat.pm \
  Classes/Cumulus.pm \
  Classes/Netgear.pm \
  Classes/Lantronix.pm \
  Classes/Lantronix/SLS.pm \
  Classes/Device.pm

SED=/bin/sed
GREP=/bin/grep
CAT=/bin/cat
ECHO=/bin/echo
if DISABLE_STANDALONE
STANDALONE = no
else
STANDALONE = yes
endif

SUFFIXES = .pl .pm .sh

VPATH=$(top_srcdir) $(top_srcdir)/plugins-scripts $(top_srcdir)/plugins-scripts/t

EXTRA_DIST=$(libexec_SCRIPTS).pl $(EXTRA_MODULES) $(GL_MODULES)

CLEANFILES=$(libexec_SCRIPTS)

AM_INSTALL_PROGRAM_FLAGS=@INSTALL_OPTS@

.pm :
	$(AWK) -f ./subst $< > $@
	chmod +x $@

.pl :
	$(AWK) -f ./subst $< > $@
	chmod +x $@

.sh :
	$(AWK) -f ./subst $< > $@
	chmod +x $@

$(libexec_SCRIPTS) : $(EXTRA_DIST)
	if [ -f ../../GLPlugin/lib/Monitoring/GLPlugin.pm ]; then cp -r ../../GLPlugin/lib ..; fi
	$(ECHO) "#! #PERL# -w" | $(AWK) -f ./subst > $@
	$(ECHO) "# nagios: -epn" >> $@
	$(ECHO) >> $@
	if [ "${STANDALONE}" == "yes" ]; then \
		$(ECHO) i am standalone; \
		for m in ${GL_MODULES}; do \
			$(SED) -e 's/^1;//g' < $$m | $(SED) -e '/^__END__/,$$d' | $(SED) -e '/^__PACKAGE__/,$$d' | $(AWK) -f ./subst >> $@; \
		done \
	fi
	for m in ${EXTRA_MODULES}; do \
		$(SED) -e 's/^1;//g' < $$m | $(SED) -e '/^__END__/,$$d' | $(AWK) -f ./subst >> $@; \
	done
	$(ECHO) "package main;" >> $@
	$(CAT) $(libexec_SCRIPTS).pl | $(AWK) -f ./subst >> $@
	chmod +x $@

